--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="nav__links">
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#contact">Test</a>
                 </li>
                 <li>
                     <a href="#about__us">À propos</a>
