commit askme site

--- a/404.html
+++ b/404.html
@@ -12,8 +12,7 @@
 <body style="background: linear-gradient(90deg, #78D2D8, 50%, #3316E3);">
     <div class="div__deg">
         <div>
-            <a href="index.html"><img class="logo_blumee_404" src="assets/icons/logo_transparent.svg"
-                    alt=" Blumee logo"></a>
+            <a href="index.html"><img class="logo_blumee_404" src="assets/icons/askmelogo.png" alt=" Askme logo"></a>
         </div>
         <p class="number_404">404</p>
         <div class="error_404">
