--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="src/css/style.css">
 
-    <title>Blumee - Accueil</title>
+    <title>Askme - Accueil</title>
 </head>
 
 <body>
@@ -16,13 +16,13 @@
     <!--Code du menu-->
 
     <header class="header__index">
-        <a class="logo__blumee" href="index.html"><img class="logo__blumee" src="assets/icons/logo_transparent.svg"
-                alt="logo Blumee"></a>
+        <a class="logo__blumee" href="index.html"><img class="logo__blumee" src="assets/icons/askmelogo.png"
+                alt="logo Askme"></a>
 
         <nav>
             <ul class="nav__links">
                 <li>
-                    <a href="#contact">Test</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li>
                     <a href="#about__us">À propos</a>
@@ -39,7 +39,7 @@
 
             <div class="bloc__accueil__gauche">
                 <div class="bloc__home">
-                    <h1 class="title__blumee">Blumee</h1>
+                    <h1 class="title__blumee">Askme</h1>
                     <h2 class="tagline"> believe in being better </h2>
                 </div>
                 <div class="margin__signin">
@@ -64,7 +64,7 @@
             <div class="bloc__cards__00">
                 <div class="corps__explication__00">
                     <h2 class="title__explication__00"> La solution pour progresser !</h2>
-                    <p class="text__explication__00">Blumee t'accompagne pour ton éducation grâce à de nombreux <span
+                    <p class="text__explication__00">Askme t'accompagne pour ton éducation grâce à de nombreux <span
                             class="bold">espaces d'échanges</span>.
                     <p class="text__explication__00"> En misant principalement sur l'entraide, nous souhaitons que
                         chacun
@@ -81,7 +81,7 @@
                     <h2 class="title__explication__00"> UN GAIN DE TEMPS CONSEQUENT!</h2>
                     <p class="text__explication__00">Accédez à une <span class="bold"> aide </span> dont vous avez
                         besoin
-                        quand vous en avez besoin grâce à <span class="bold"> Blumee </span>!.
+                        quand vous en avez besoin grâce à <span class="bold"> Askme </span>!
                     <p class="text__explication__00"> En demandant une aide, vous êtes sûr de l’a recevoir dans des
                         <span class="bold"> délais </span>très court.
                     </p>
@@ -115,10 +115,10 @@
                             <div>
                                 <img class="resize__icon" src="assets/icons/favorite.svg" alt="Icone favoris">
                             </div>
-                            <h3 class="title__feature">L’ESPACE BLUMEE</h3>
+                            <h3 class="title__feature">L’ESPACE ASKME</h3>
                             <p>
                                 Demander ou au contraire, proposer de l’aide facilement dans l’espace d’échange
-                                Blumee !
+                                Askme !
                             </p>
                         </div>
                     </div>
@@ -141,8 +141,8 @@
                             <div>
                                 <img class="resize__icon" src="assets/icons/feature_2.svg" alt="Icone favoris">
                             </div>
-                            <h3 class="title__feature">Blumee Pass</h3>
-                            <p>Le Blumee Pass propose un contenu varié avec une possibilité d’envoi d’images pour plus
+                            <h3 class="title__feature">Askme Pass</h3>
+                            <p>Le Askme Pass propose un contenu varié avec une possibilité d’envoi d’images pour plus
                                 d’aide.</p>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                 <div class="align">
                     <div class="card__premium">
                         <div class="under__card__premium">
-                            <h2 class="title__premium">Blumee Pass</h2>
+                            <h2 class="title__premium">Askme Pass</h2>
                             <p class="card__price">3.99€/mois</p>
 
                             <div class="column__card__check">
@@ -296,12 +296,12 @@
         <!--Fin de la section à propos, début de la section formulaire de contact-->
 
         <div class="bloc__quote">
-            <h3 class="text__quote">VOYEZ BLUMEE COMME VOTRE
+            <h3 class="text__quote">VOYEZ ASKME COMME VOTRE
                 ESPACE D’ETUDE !</h3>
         </div>
 
         <div class="logo__center">
-            <img id="contact" src="assets/icons/logo_black.svg" alt="Logo Blumee">
+            <img id="contact" src="assets/icons/askmelogo(3).png" alt="Logo Askme">
         </div>
 
         <div class="align__form">
@@ -345,8 +345,8 @@
     </main>
     <footer class="footer">
         <div class="center__footer">
-            <img class="logo__footer" src="assets/icons/logo_transparent.svg" alt="Logo Blumee">
-            <h2 class="title__footer">Blumee.</h2>
+            <img class="logo__footer" src="assets/icons/askmelogo.png" alt="Logo Askme">
+            <h2 class="title__footer">Askme.</h2>
             <p class="text__footer">believe in being better !</p>
             <div class="bloc__sep__line__footer">
                 <div class="footer__separation"></div>
@@ -361,7 +361,7 @@
                         src="assets/icons/instagram.svg" alt="Icone Instagram"></a>
             </div>
 
-            <p class="legal"> © Blumee. All <span class="legal__bold"> rights reserved - <a href="404.html"> C.G.U</a>
+            <p class="legal"> © Askme. All <span class="legal__bold"> rights reserved - <a href="404.html"> C.G.U</a>
                 </span></p>
         </div>
     </footer>
