commit site askme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h2 class="tagline"> believe in being better </h2>
                 </div>
                 <div class="margin__signin">
-                    <a class="link__signin" href="#newsletter">Se tenir au courant</a>
+                    <a class="link__signin" href="https://askme.davidsarkissian.fr/">Se rendre sur Askme</a>
                 </div>
             </div>
 
